<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg1"
    tools:context=".Second">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/profile"
        android:layout_marginTop="@dimen/_100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/_todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_120dp"
        android:textStyle="bold"
        android:textSize="@dimen/_40dp"
        android:gravity="center"
        android:fontFamily="@font/happy_boy"
        android:text="@string/_introduce"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_bio"
            android:layout_marginStart="@dimen/_60dp"
            android:layout_marginTop="@dimen/_40dp"
            android:textColor="@color/_000"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_isi"
            android:layout_marginStart="@dimen/_15dp"
            android:layout_marginTop="@dimen/_40dp"
            android:textColor="@color/_000"
            />

    </LinearLayout>


</LinearLayout>