<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".CoverActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_hello"
        android:fontFamily="@font/maylika_calligraphy"
        android:textSize="@dimen/_60dp"
        android:textColor="#000000"
        android:layout_marginTop="90dp"
        android:layout_gravity="center"
        tools:ignore="SpUsage" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_lets"
        android:fontFamily="@font/maylika_calligraphy"
        android:layout_gravity="center"
        android:textSize="@dimen/_25sp"/>


    <Button
        android:id="@+id/btnCheck"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginTop="190dp"
        android:text="@string/check_my_bio"
        android:layout_gravity="center"/>

</LinearLayout>